# marioparty4

./: .gitignore  .gitmodules  CMakeLists.txt  configure.py  dol.def  dolphin_rels_to_mod.py  rel.map
config/GMPE01_00/: build.sha1  config.yml  symbols.txt
config/GMPE01_00/rels/mentDll/: symbols.txt
config/GMPE01_00/rels/mstory4Dll/: symbols.txt
config/GMPE01_00/rels/option/: symbols.txt
config/GMPE01_00/rels/resultDll/: symbols.txt
config/GMPE01_01/: symbols.txt
config/GMPJ01_00/: symbols.txt
config/GMPJ01_00/rels/mentDll/: symbols.txt
config/GMPJ01_00/rels/mstory4Dll/: symbols.txt
config/GMPP01_00/: config.yml  splits.txt  symbols.txt
config/GMPP01_00/rels/E3setupDLL/: symbols.txt
config/GMPP01_00/rels/_minigameDll/: symbols.txt
config/GMPP01_00/rels/bootDll/: splits.txt  symbols.txt
config/GMPP01_00/rels/instDll/: symbols.txt
config/GMPP01_00/rels/m303Dll/: splits.txt
config/GMPP01_00/rels/m401Dll/: symbols.txt
config/GMPP01_00/rels/nisDll/: splits.txt  (+1 more)
config/GMPP01_02/: config.yml
include/: datadir_table.h  ext_math.h  ovl_table.h  version.h
include/REL/: m407dll.h  m410Dll.h  m415Dll.h  m424Dll.h  m434Dll.h  m440Dll.h  m446Dll.h  modeltestDll.h  modeseldll.h  w05Dll.h  w10Dll.h
include/dolphin/: ar.h  arq.h  mtx.h  os.h  pad.h  types.h
include/dolphin/gx/: GXBump.h  GXDispList.h  GXGeometry.h  GXPriv.h
include/game/: animdata.h  audio.h  card.h  data.h  gamework_data.h  hsfanim.h  hsfdraw.h  hsfformat.h  hsfload.h  hsfman.h  hsfmotion.h  init.h  jmp.h  mapspace.h  memory.h  minigame_seq.h  msm.h  object.h  objsub.h  pad.h  printfunc.h  process.h  saveload.h  sprite.h  window.h  wipe.h
include/game/board/: basic_space.h  boo.h  boo_house.h  bowser.h  fortune.h  item.h  main.h  model.h  player.h  space.h  tutorial.h  window.h
include/port/: byteswap.h
libc/: math.h
src/REL/: board_executor.c
src/REL/E3setupDLL/: main.c  mgselect.c
src/REL/bootDll/: main.c
src/REL/instDll/: main.c
src/REL/m401Dll/: main.c  main_ex.c
src/REL/m402Dll/: main.c
src/REL/m403Dll/: main.c  scene.c
src/REL/m404Dll/: main.c
src/REL/m405Dll/: main.c
src/REL/m406Dll/: main.c  map.c  player.c
src/REL/m407dll/: map.c  player.c  score.c  whomp.c  whomp_score.c
src/REL/m408Dll/: camera.c  main.c  object.c  stage.c
src/REL/m409Dll/: cursor.c  main.c  player.c
src/REL/m410Dll/: game.c  main.c  player.c
src/REL/m411Dll/: main.c
src/REL/m412Dll/: main.c
src/REL/m413Dll/: main.c
src/REL/m414Dll/: main.c
src/REL/m415Dll/: main.c  map.c
src/REL/m416Dll/: main.c  map.c
src/REL/m417Dll/: main.c  player.c  water.c
src/REL/m418Dll/: main.c
src/REL/m419Dll/: main.c
src/REL/m420dll/: camera.c  main.c  map.c  player.c
src/REL/m421Dll/: main.c  player.c
src/REL/m422Dll/: main.c
src/REL/m423Dll/: main.c
src/REL/m424Dll/: ball.c  claw.c  map.c
src/REL/m425Dll/: main.c  thwomp.c
src/REL/m426Dll/: main.c
src/REL/m427Dll/: main.c  map.c  player.c
src/REL/m428Dll/: main.c  map.c  player.c
src/REL/m429Dll/: main.c
src/REL/m430Dll/: main.c  player.c  water.c
src/REL/m431Dll/: main.c  object.c
src/REL/m432Dll/: main.c
src/REL/m433Dll/: main.c  map.c  player.c
src/REL/m434Dll/: fish.c  map.c  player.c
src/REL/m435Dll/: main.c
src/REL/m436Dll/: main.c
src/REL/m437Dll/: main.c
src/REL/m438Dll/: fire.c  main.c  map.c
src/REL/m439Dll/: main.c
src/REL/m440Dll/: main.c  object.c
src/REL/m441Dll/: main.c
src/REL/m442Dll/: main.c
src/REL/m443Dll/: main.c  player.c
src/REL/m444dll/: main.c  pinball.c  shadow.c
src/REL/m445Dll/: main.c
src/REL/m446Dll/: camera.c  card.c  cursor.c  deck.c  main.c  player.c  stage.c  table.c
src/REL/m447dll/: main.c  player.c
src/REL/m448Dll/: main.c
src/REL/m449Dll/: main.c
src/REL/m450Dll/: main.c
src/REL/m451Dll/: m451.c
src/REL/m453Dll/: main.c  map.c  score.c
src/REL/m455Dll/: main.c  stage.c
src/REL/m456Dll/: main.c  stage.c
src/REL/m457Dll/: main.c
src/REL/m458Dll/: main.c
src/REL/m459dll/: main.c
src/REL/m460Dll/: main.c  map.c  score.c
src/REL/m461Dll/: main.c
src/REL/m463Dll/: main.c
src/REL/mentDll/: common.c  main.c
src/REL/messDll/: main.c
src/REL/mgmodedll/: battle.c  free_play.c  mgmode.c  minigame.c  tictactoe.c
src/REL/modeltestDll/: main.c  modeltest00.c  modeltest01.c
src/REL/modeseldll/: datalist.c  filesel.c  main.c  modesel.c
src/REL/mpexDll/: charsel.c  mpex.c
src/REL/mstory2Dll/: ending.c  main.c
src/REL/mstory3Dll/: main.c  win_effect.c
src/REL/mstory4Dll/: main.c
src/REL/mstoryDll/: main.c
src/REL/nisDll/: main.c
src/REL/option/: scene.c  sound.c
src/REL/present/: present.c
src/REL/resultDll/: battle.c
src/REL/selmenuDll/: main.c
src/REL/w01Dll/: main.c  mg_coin.c
src/REL/w02Dll/: mg_item.c
src/REL/w03Dll/: condor.c  mg_coin.c  mg_item.c  smoke.c
src/REL/w04Dll/: big_boo.c  boo_event.c  main.c  mg_coin.c  mg_item.c
src/REL/w05Dll/: hotel.c  mg_coin.c  mg_item.c  monkey.c
src/REL/w06Dll/: main.c  mg_coin.c
src/REL/w10Dll/: main.c  scene.c
src/REL/ztardll/: main.c  select.c
src/dolphin/demo/: DEMOInit.c  DEMOPuts.c
src/dolphin/mtx/: mtx.c  mtx44.c  quat.c  vec.c
src/dolphin/os/: OSAlloc.c  OSArena.c  OSStopwatch.c
src/dolphin/si/: SIBios.c
src/game/: ClusterExec.c  EnvelopeExec.c  THPDraw.c  armem.c  card.c  chrman.c  code_8003FF68.c  data.c  flag.c  frand.c  gamework.c  hsfanim.c  hsfdraw.c  hsfex.c  hsfload.c  hsfman.c  hsfmotion.c  init.c  jmp.c  main.c  malloc.c  mapspace.c  memory.c  messdata.c  minigame_seq.c  objdll.c  objmain.c  objsub.c  objsysobj.c  ovllist.c  pad.c  printfunc.c  process.c  saveload.c  sprman.c  sprput.c  sreset.c  thpmain.c  window.c  wipe.c
src/game/board/: audio.c  basic_space.c  battle.c  block.c  boo.c  boo_house.c  bowser.c  com.c  com_path.c  fortune.c  item.c  last5.c  lottery.c  main.c  mg_setup.c  model.c  mushroom.c  pause.c  player.c  shop.c  space.c  star.c  start.c  tutorial.c  ui.c  view.c  window.c
src/port/: OS.c  ar.c  arq.c  audio.c  byteswap.cpp  dvd.c  imgui.cpp  portmain.c  stubs.c
tools/: extract_includes.py
(+94 files in other folders)
